# Project-330-DGL

./: GAT.ipynb  README.md  csrmatrix.cpp  gat.py  gat_message.py  gat_message_and_message_and_aggregate.py  gatactivation  minibatch_saver.py  planety2.ipynb  requirements.txt  spmm_csr_extension.py  spmm_csr_x_csr.cpp  spmm_csr_x_dense.cpp  spmm_csr_x_dense2.cpp  to_sparse_tensor.py  useGatCSR0.py  useGatCSRmaa.py  useGatCSRmmaa.py
Dokumenty/: aneks.odt  data_monitoringg.csv
GAT/: gat_message_and_aggregate.py  useGatCSRm.py  useGatCSRmmaa.py
Nowy folder (2)/: my_gat_layer.py
Planetoid_COO_to_CSR/: gat_message_and_aggregate.py  spmm_csr_extension.py  useGat.py
Planetoid_COO_to_CSR_cpp/: gat_message_and_aggregate.py  setup.py  spmm_csr.cpp  useGat.py
Tylko_propagacja/: main.py  my_gat_layer.py  spmm_extension.cpp
final/heads_benchmark/: main.py  spmm_extension.cpp
final/wersja 2 head top/: my_gat_layer.py  setup.py
minibatch_loader/: CMakeLists.txt  CMakeLists.txt.txt  README.md  main.cpp
openMP/: OpenMPrandom.cpp  OpenMPtxtLoad.cpp  torch_load_txt.py
wersja 1 h&d zagnieżdzone/: main.py
